<resources>
    <string name="app_name">StorageCrypt</string>
    <string name="placeholder_text">text</string>
    <string name="document_type_icon_description">File or folder icon</string>
    <string name="data_stores_header_text">Data Stores</string>
    <string name="size_text">Size: %s</string>
    <string name="progress_text_unlocking_database">Unlocking database</string>
    <string name="progress_text_adding_account">Adding account</string>
    <string name="progress_text_reauth_account">Refreshing account</string>
    <string name="progress_text_encrypting_documents">Encrypting documents</string>
    <string name="progress_text_decrypting_documents">Decrypting documents</string>
    <string name="progress_text_moving_documents">Moving documents</string>
    <string name="progress_text_importing_documents">Importing documents</string>
    <string name="progress_text_pushing_updates">Sending updates</string>
    <string name="progress_text_syncing_remote_documents_changes">Synchronizing remote documents changes</string>
    <string name="progress_text_syncing_remote_documents">Synchronizing remote documents</string>
    <string name="progress_message_deleting_remote_document">Deleting</string>
    <string name="progress_message_uploading_remote_document">Uploading</string>
    <string name="progress_message_downloading_remote_document">Downloading</string>
    <string name="progress_dialog_fragment_cancel_button_text">Cancel</string>
    <string name="progress_dialog_fragment_pause_button_text">Pause</string>
    <string name="progress_dialog_fragment_resume_button_text">Resume</string>
    <string name="alert_dialog_fragment_error_title">Error</string>
    <string name="alert_dialog_fragment_ok_button_text">OK</string>
    <string name="results_dialog_encryption_results_title">Encryption results</string>
    <string name="results_dialog_encryption_results_header">Documents encryption results :</string>
    <string name="results_dialog_decryption_results_title">Decryption results</string>
    <string name="results_dialog_decryption_results_header">Documents decryption results :</string>
    <string name="results_dialog_move_results_title">Move results</string>
    <string name="results_dialog_move_results_header">Documents move results :</string>
    <string name="results_dialog_import_results_title">Import results</string>
    <string name="results_dialog_import_results_header">Documents import results :</string>
    <string name="results_dialog_push_updates_results_title">Updates push results</string>
    <string name="results_dialog_push_updates_results_header">Documents updates push results :</string>
    <string name="results_dialog_changes_sync_results_title">Changes sync results</string>
    <string name="results_dialog_changes_sync_results_header">Documents changes sync results :</string>
    <string name="results_dialog_back_button_text">Back</string>
    <string name="results_dialog_success_message">Success :</string>
    <string name="results_dialog_skipped_message">Skipped (existing) :</string>
    <string name="results_dialog_errors_message">Errors :</string>
    <string name="error_message_no_cloud_app_keys">The secret keys needed to use the cloud synchronization are missing. If you compiled the app yourself, please read all the instructions to know how to obtain these keys.</string>
    <string name="error_message_failed_to_get_key">Failed to get key : \"%s\"</string>
    <string name="error_message_failed_to_rename_key">Failed to rename key \"%1$s\" as \"%2$s\"</string>
    <string name="error_message_keystore_wrong_current_password">Wrong current keystore password</string>
    <string name="error_message_unable_to_unlock_the_keystore_check_your_password">Unable to unlock the keystore, check your password</string>
    <string name="error_message_keystore_password_cannot_be_empty">Keystore password cannot be empty</string>
    <string name="error_message_keystore_password_and_confirmation_do_not_match">Keystore password and confirmation do not match</string>
    <string name="error_message_keystore_change_password">Failed to change the Keystore password</string>
    <string name="error_message_key_already_exists">A key with the same name already exists. If you want to use this name for a new key, delete or rename the existing one</string>
    <string name="error_message_you_cannot_encrypt_a_document_here">You cannot encrypt a document here</string>
    <string name="error_message_you_cannot_encrypt_documents_here">You cannot encrypt documents here</string>
    <string name="error_message_you_cannot_delete_the_local_storage_provider">You cannot delete the local storage provider</string>
    <string name="error_message_you_cannot_create_a_document_here">You cannot create a document here</string>
    <string name="error_message_failed_to_add_account">Failed to add account</string>
    <string name="error_message_failed_to_add_account_with_name">Failed to add \"%s\" account</string>
    <string name="error_message_failed_to_create_document">Failed to create document</string>
    <string name="error_message_no_app_found_to_open">No application was found to open this type of file</string>
    <string name="error_message_no_app_found_to_share">No application was found to share this type of file</string>
    <string name="error_message_keystore_file_not_found">KeyStore file not found</string>
    <string name="error_message_keystore_unlock">Failed to unlock the KeyStore, check your password</string>
    <string name="error_message_keystore_read">Failed to read the KeyStore file, it may be corrupted</string>
    <string name="error_message_keystore_create">Failed to create the KeyStore file</string>
    <string name="error_message_keystore_write">Failed to write the KeyStore file</string>
    <string name="error_message_you_cannot_move_documents_until_sync_done">Some documents you are trying to move still need to be synchronized. You cannot move them until the synchronization process is completed.</string>
    <string name="error_message_you_cannot_move_documents_until_download_done">Some documents you are trying to move still need to be downloaded. You cannot move them until download is completed.</string>
    <string name="error_message_you_cannot_move_documents_in_subfolder">You cannot move a document inside himself or one of his subfolders.</string>
    <string name="error_message_you_cannot_move_documents_in_the_same_place">You cannot move a document in its original folder.</string>
    <string name="error_message_failed_to_reauth_to_account">Failed to reauthenticate to your account</string>
    <string name="error_message_reauth_with_wrong_account">Wrong account : you authenticated with %1$s and not %2$s</string>
    <string name="error_message_NetworkException">Network connectivity error</string>
    <string name="error_message_NotFoundException">Remote document not found</string>
    <string name="error_message_UserCanceledException">Operation canceled by the user</string>
    <string name="error_message_OauthException">Account authentication error</string>
    <string name="error_message_StorageCryptException_GetRemoteAppFolderError">Failed to get remote app folder</string>
    <string name="error_message_StorageCryptException_GetRemoteDocumentError">Failed to get remote document</string>
    <string name="error_message_StorageCryptException_GetRemoteFolderError">Failed to get remote folder</string>
    <string name="error_message_StorageCryptException_GetRemoteFileError">Failed to get remote file</string>
    <string name="error_message_StorageCryptException_CreationError">Creation error</string>
    <string name="error_message_StorageCryptException_DocumentExists">Document already exists</string>
    <string name="error_message_StorageCryptException_ParentNotFound">Parent not found</string>
    <string name="error_message_StorageCryptException_KeyStoreIsLocked">Keystore is locked</string>
    <string name="error_message_StorageCryptException_EncryptionError">Encryption error</string>
    <string name="error_message_StorageCryptException_KeyNotFound">Key not found</string>
    <string name="error_message_StorageCryptException_DatabaseUnlockError">Failed to unlock the database</string>
    <string name="locked_keystore_fragment_message_header_text">Type your password to unlock.</string>
    <string name="locked_keystore_fragment_message_details_text">
        If you don\'t want to type it too often, you can keep the app running by checking \"Keep alive\" in the app \"Settings\" menu.
    </string>
    <string name="locked_keystore_fragment_password_label">Password : </string>
    <string name="locked_keystore_fragment_show_details_button_text">Show details</string>
    <string name="empty_keystore_fragment_message_text">
        In order to use the application, you need at least one encryption key.\n
        If it is the first time you use StorageCrypt, a new key can be generated automatically for you.\n
        If you already have StorageCrypt on another device, you can export keys from this device and import them here,\n
        if you want to access the files encrypted on the other device.
    </string>
    <string name="empty_keystore_fragment_create_key_text">Create a new default key :</string>
    <string name="empty_keystore_fragment_create_key_button_text">Create</string>
    <string name="empty_keystore_fragment_import_keys_text">Or import keys :</string>
    <string name="empty_keystore_fragment_import_keys_button_text">Import</string>
    <string name="keystore_fragment_title">Keystore management</string>
    <string name="keystore_fragment_locked_text">The keystore is locked.</string>
    <string name="keystore_fragment_existing_keys_text">Existing keys</string>
    <string name="keystore_fragment_lock_button_text">Lock</string>
    <string name="change_keystore_password_fragment_current_password_label">Current password : </string>
    <string name="change_keystore_password_fragment_new_password_label">New password : </string>
    <string name="change_keystore_password_fragment_new_password_confirmation_label">Confirmation : </string>
    <string name="document_context_menu_details">Details</string>
    <string name="document_context_menu_open">Open</string>
    <string name="document_context_menu_share">Share</string>
    <string name="document_context_menu_delete">Delete</string>
    <string name="document_context_menu_decrypt">Decrypt</string>
    <string name="document_context_menu_select_default_key">Select default key</string>
    <string name="document_context_menu_import_existing">Import existing documents</string>
    <string name="document_context_menu_push_updates">Push updates</string>
    <string name="document_context_menu_sync_remote_changes">Fetch remote changes</string>
    <string name="document_context_menu_select">Select</string>
    <string name="document_context_menu_selection_mode">Selection mode</string>
    <string name="menu_change_keystore_password">Change password</string>
    <string name="menu_export_keys">Export keys</string>
    <string name="menu_import_keys">Import keys</string>
    <string name="menu_generate_key">Generate a new key</string>
    <string name="menu_create_folder">Create an empty folder</string>
    <string name="menu_encrypt">Encrypt</string>
    <string name="menu_encrypt_single">Encrypt a single file</string>
    <string name="menu_encrypt_multiple">Encrypt multiple files</string>
    <string name="menu_manage_secret">Manage Secret</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_back">Back</string>
    <string name="menu_order_by">Order</string>
    <string name="menu_order_by_name">Order by name</string>
    <string name="menu_order_by_mimetype">Order by type</string>
    <string name="menu_order_by_size">Order by size</string>
</resources>