<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/details"
        android:title="@string/document_context_menu_details" />

    <item
        android:id="@+id/select_default_key"
        android:title="@string/document_context_menu_select_default_key" />

    <item
        android:id="@+id/import_documents"
        android:title="@string/document_context_menu_import_existing" />

    <item
        android:id="@+id/push_updates"
        android:title="@string/document_context_menu_push_updates" />

    <item
        android:id="@+id/sync_remote_changes"
        android:title="@string/document_context_menu_sync_remote_changes" />

    <item
        android:id="@+id/decrypt"
        android:title="@string/document_context_menu_decrypt" />

    <item
        android:id="@+id/selection_mode"
        android:title="@string/document_context_menu_selection_mode" />
</menu>