<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".android.activity.MainActivity">

    <item
        android:id="@+id/action_change_keystore_password"
        android:title="@string/menu_change_keystore_password"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_export_keys"
        android:title="@string/menu_export_keys"
        android:orderInCategory="200"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_import_keys"
        android:title="@string/menu_import_keys"
        android:orderInCategory="300"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_generate_key"
        android:title="@string/menu_generate_key"
        android:orderInCategory="400"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="500"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:title="@string/menu_help"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="600"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="700"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_back"
        android:title="@string/menu_back"
        android:icon="@drawable/ic_shutdown"
        android:orderInCategory="800"
        android:showAsAction="never" />

</menu>
