<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".android.activity.MainActivity">

    <item
        android:id="@+id/action_create_folder"
        android:title="@string/menu_create_folder"
        android:icon="@drawable/ic_folder_add_white_24dp"
        android:orderInCategory="100"
        android:showAsAction="always" />

    <item android:id="@+id/group_encrypt"
        android:icon="@drawable/ic_file_add_white_24dp"
        android:title="@string/menu_encrypt"
        android:orderInCategory="200"
        android:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_encrypt"
                android:title="@string/menu_encrypt_single"
                android:icon="@drawable/ic_file_add_black_24dp" />

            <item
                android:id="@+id/action_encrypt_multiple"
                android:title="@string/menu_encrypt_multiple"
                android:icon="@drawable/ic_file_add_black_24dp" />
        </menu>
    </item>

    <item android:id="@+id/group_order_by"
        android:title="@string/menu_order_by"
        android:icon="@drawable/ic_arrow_up_white_24dp"
        android:orderInCategory="300"
        android:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_order_by_name_asc"
                android:title="@string/menu_order_by_name"
                android:icon="@drawable/ic_arrow_up_black_24dp" />
            <item
                android:id="@+id/action_order_by_name_desc"
                android:title="@string/menu_order_by_name"
                android:icon="@drawable/ic_arrow_down_black_24dp" />
            <item
                android:id="@+id/action_order_by_mimetype_asc"
                android:title="@string/menu_order_by_mimetype"
                android:icon="@drawable/ic_arrow_up_black_24dp" />
            <item
                android:id="@+id/action_order_by_mimetype_desc"
                android:title="@string/menu_order_by_mimetype"
                android:icon="@drawable/ic_arrow_down_black_24dp" />
            <item
                android:id="@+id/action_order_by_size_asc"
                android:title="@string/menu_order_by_size"
                android:icon="@drawable/ic_arrow_up_black_24dp" />
            <item
                android:id="@+id/action_order_by_size_desc"
                android:title="@string/menu_order_by_size"
                android:icon="@drawable/ic_arrow_down_black_24dp" />
        </menu>
    </item>

    <item
        android:id="@+id/action_manage_secret"
        android:title="@string/menu_manage_secret"
        android:icon="@drawable/ic_key_white_24dp"
        android:orderInCategory="400"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:orderInCategory="500"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:title="@string/menu_help"
        android:icon="@drawable/ic_help_white_24dp"
        android:orderInCategory="600"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about"
        android:icon="@drawable/ic_info_white_24dp"
        android:orderInCategory="700"
        android:showAsAction="never" />

</menu>
