<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".android.activity.MainActivity">

    <item
        android:id="@+id/action_help"
        android:title="@string/menu_help"
        android:icon="@drawable/ic_help_white_24dp"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about"
        android:icon="@drawable/ic_info_white_24dp"
        android:orderInCategory="200"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_back"
        android:title="@string/menu_back"
        android:icon="@drawable/ic_close_white_24dp"
        android:orderInCategory="300"
        android:showAsAction="never" />

</menu>
