<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:text="@string/empty_keystore_fragment_message_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/empty_keystore_fragment_create_key_text" />

            <Button
                android:id="@+id/keystore_create_key_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_keystore_fragment_create_key_button_text" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/empty_keystore_fragment_import_keys_text" />

            <Button
                android:id="@+id/keystore_import_keys_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_keystore_fragment_import_keys_button_text" />

        </TableRow>

    </TableLayout>

</LinearLayout>