<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:text="@string/locked_keystore_fragment_message_header_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TableLayout
        android:stretchColumns="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:paddingTop="@dimen/small_margin"
            android:paddingBottom="@dimen/small_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/locked_keystore_fragment_password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/keystore_password_edit"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:inputType="text"
                android:password="true" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/locked_keystore_fragment_message_details"
        android:text="@string/locked_keystore_fragment_message_details_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <Button
        android:id="@+id/locked_keystore_fragment_message_details_toggle_button"
        android:text="@string/locked_keystore_fragment_show_details_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
