<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TableLayout
        android:stretchColumns="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:paddingTop="@dimen/small_margin"
            android:paddingBottom="@dimen/small_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/change_keystore_password_fragment_current_password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/keystore_current_password_edit"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:inputType="text"
                android:password="true" />
        </TableRow>

        <TableRow
            android:paddingTop="@dimen/small_margin"
            android:paddingBottom="@dimen/small_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/change_keystore_password_fragment_new_password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/keystore_new_password_edit"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:inputType="text"
                android:password="true" />
        </TableRow>

        <TableRow
            android:paddingTop="@dimen/small_margin"
            android:paddingBottom="@dimen/small_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/change_keystore_password_fragment_new_password_confirmation_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/keystore_new_password_confirmation_edit"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:inputType="text"
                android:password="true" />
        </TableRow>
    </TableLayout>
</LinearLayout>
